Fix: Do not show the dialog filler on mobile devices.

--- a/modules/cms/ui/themes/default/style/openrat.css
+++ b/modules/cms/ui/themes/default/style/openrat.css
@@ -158,16 +158,16 @@ Basis-Style for Openrat.
 .or-dialog--is-open .or-dialog-filler {
 	width: 15%;
 }
+@media only screen and (max-width: 55rem) {
+	.or-dialog--is-open .or-dialog-filler {
+		width: 0;
+	}
+}
 .or-dialog-filler {
 	height: 100%;
 	width: 100%;
 	opacity: 0.6;
 	filter: blur(10em);
-}
-@media only screen and (max-width: 55rem) {
-	.or-dialog-filler {
-		width: 0;
-	}
 }
 .or-dialog-filler-icon {
 	opacity: 1;
@@ -185,7 +185,7 @@ Basis-Style for Openrat.
 .or-dialog-content .or-view {
 	height: 100%;
 }
-/*# sourceMappingURL=data:application/json,%7B%22version%22%3A3%2C%22sources%22%3A%5B%22mnt%5C%2Fdata%5C%2Fdankert%5C%2FEntwicklung%5C%2FProjekte%5C%2Fopenrat-cms%5C%2Fmodules%5C%2Fcms%5C%2Fui%5C%2Fthemes%5C%2Fdefault%5C%2Fstyle%5C%2Fopenrat-dialog.less%22%5D%2C%22names%22%3A%5B%5D%2C%22mappings%22%3A%22%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3BAAgCI%2CGAAC%3BCAEC%3BCACA%3BCACA%3BCACA%3BCACA%3BCACA%3BCACA%3BCACA%3BCACA%3BCAGA%3BCACA%3B%3BAAEA%2CGAhBD%2COAgBE%3BCACC%3BCACA%3BCACA%3BCACA%3B%3BAAJF%2CGAhBD%2COAgBE%2CSAKC%3BCACE%3B%3BAAIJ%2CGA1BD%2COA0BE%3BCACC%3BCACA%3BCACA%3BCACA%2CQAAQ%2CUAAR%3B%3BAAMA%3BCAAA%2CGApCH%2COA0BE%3BEAOG%3B%3B%3BAAGF%2CGApCH%2COA0BE%2COAUE%3BCACC%3BCACA%3BCACA%3BCACA%3BCACA%3B%3BAAIJ%2CGA7CD%2COA6CE%3BCAEG%3BCACA%3BCAMA%3BCAIA%3B%3BAAbJ%2CGA7CD%2COA6CE%2CQAeG%3BCACE%22%7D */
+/*# sourceMappingURL=data:application/json,%7B%22version%22%3A3%2C%22sources%22%3A%5B%22mnt%5C%2Fdata%5C%2Fdankert%5C%2FEntwicklung%5C%2FProjekte%5C%2Fopenrat-cms%5C%2Fmodules%5C%2Fcms%5C%2Fui%5C%2Fthemes%5C%2Fdefault%5C%2Fstyle%5C%2Fopenrat-dialog.less%22%5D%2C%22names%22%3A%5B%5D%2C%22mappings%22%3A%22%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3B%3BAAgCI%2CGAAC%3BCAEC%3BCACA%3BCACA%3BCACA%3BCACA%3BCACA%3BCACA%3BCACA%3BCACA%3BCAGA%3BCACA%3B%3BAAEA%2CGAhBD%2COAgBE%3BCACC%3BCACA%3BCACA%3BCACA%3B%3BAAJF%2CGAhBD%2COAgBE%2CSAKC%3BCACE%3B%3BAAKF%3BCAAA%2CGA3BH%2COAgBE%2CSAKC%3BEAII%3B%3B%3BAAKN%2CGA9BD%2COA8BE%3BCACC%3BCACA%3BCACA%3BCACA%2CQAAQ%2CUAAR%3B%3BAAIA%2CGAtCH%2COA8BE%2COAQE%3BCACC%3BCACA%3BCACA%3BCACA%3BCACA%3B%3BAAIJ%2CGA%5C%2FCD%2COA%2BCE%3BCAEG%3BCACA%3BCAMA%3BCAIA%3B%3BAAbJ%2CGA%5C%2FCD%2COA%2BCE%2CQAeG%3BCACE%22%7D */
 /* Include style: /default/style/openrat-diff */
 .or-diff-line {
 	text-align: right;
